--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Redirecting…</title>
-    <!-- Redirect GitHub Pages visitors to the Vercel Next.js deployment -->
-    <meta http-equiv="refresh" content="0;url=https://aisle-soft-151y.vercel.app/">
-    <meta name="robots" content="noindex">
-    <script>
-      // Fallback JS redirect for browsers that ignore meta-refresh
-      (function(){
-        try{
-          window.location.replace('https://aisle-soft-151y.vercel.app/');
-        }catch(e){}
-      })();
-    </script>
+    <title>AisleSoft — デプロイ中</title>
+    <style>
+      body{font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;display:flex;align-items:center;justify-content:center;height:100vh;margin:0;background:#0f172a;color:#e6eef8}
+      .card{max-width:680px;padding:28px;border-radius:12px;background:linear-gradient(180deg,rgba(255,255,255,0.03),rgba(255,255,255,0.02));box-shadow:0 6px 18px rgba(2,6,23,0.6)}
+      a.button{display:inline-block;margin-top:12px;padding:8px 14px;border-radius:8px;background:#60a5fa;color:#08203a;text-decoration:none;font-weight:600}
+    </style>
   </head>
   <body>
-    <p>Redirecting to <a href="https://aisle-soft-151y.vercel.app/">the site on Vercel</a>…</p>
+    <div class="card">
+      <h1>AisleSoft — デプロイ中</h1>
+      <p>現在、サイトは Vercel にデプロイ中または再デプロイがトリガーされています。しばらく待ってから再読み込みしてください。</p>
+      <p>確認手順：</p>
+      <ol>
+        <li>Vercel のダッシュボードにログインして、プロジェクトの最新デプロイ状態を確認してください（<a href="https://vercel.com/dashboard" target="_blank" rel="noopener">Vercel ダッシュボード</a>）。</li>
+        <li>デプロイが成功したら公開 URL が表示されます。数十秒〜数分で反映されることがあります。</li>
+      </ol>
+      <a class="button" href="https://vercel.com/dashboard" target="_blank" rel="noopener">Vercel ダッシュボードを開く</a>
+      <a class="button" href="https://github.com/toyonaga546/AisleSoft" style="margin-left:12px;" target="_blank" rel="noopener">リポジトリを見る</a>
+    </div>
   </body>
 </html>
